Update for 1.18. Compiles but not complete
TODO:
* Implement offhand attack indicator rendering (and test)
* Implement extra heart renderer
* Implement test book command